loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:11: error: '=>' expected but integer literal found.
    case >=3 => gauche()
           ^Poucet1:12: error: '=>' expected but integer literal found.
    case <=2 => droite()
           ^